--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="<%= BASE_URL %>tb_circle_blue.png" />
-    <title>brewOS</title>
+    <title>Trent Brew</title>
   </head>
   <body>
     <noscript>
